# backend

./: .gitignore  Dockerfile  Readme.md  available_models.py  config.py  docker-compose.yml  env.example  main.py  paths.py  pixel_area_measurement.py  pixel_scale_measurement.py  pyproject.toml  requirements.txt  run.py  setup.py
app/: __init__.py  app.py  config.py  further_segmentation.py  image_segmentation.py
app/database/: __init__.py  contours.py  cutouts.py  datasets.py  images.py  labels.py  mask_generation.py  masks.py  models.py  scans.py  users.py
app/encoder/: dummy_encoder.py
app/routes/: __init__.py  auth.py  contours.py  cutouts.py  datasets.py  export.py  image_annotation_session.py  images.py  labels.py  mask_generation.py  masks.py  models.py  pixel_scale.py  sam2_endpoints.py  scans.py  segmentation.py
app/schemas/: annotation_session.py  contour_hierarchy.py  contours.py  cutouts.py  dataset.py  image.py  image_processing.py  images.py  labels.py  masks.py  quantification.py  sam2_schemas.py  scale.py  segmentation.py  segmentation_and_masks.py  segmentation_schemas.py  user.py  util.py
app/services/: __init__.py  auth.py  celery_app.py  contours.py  cropping.py  cutouts.py  database_access.py  dataloader.py  encoding.py  image_loader.py  labels.py  logging.py  mask_generation.py  postprocessing.py  preprocessing.py  prompts.py  quantifications.py  redis.py  sam2.py  sam_model.py  util.py  (+3 more)
output/: calculated_image_areas.csv  measurements.csv
scripts/: add_models_to_db.py
tests/: sam2_tests.py  test_image_loader.py  test_segmentation.py
(+70 files in other folders)
