[project]
name = "coral-back"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "albumentations>=2.0.8",
    "fastapi[standard]>=0.68.0",
    "httpx>=0.24.0",
    "hydra-core>=1.3.2",
    "numpy>=1.21.0",
    "opencv-python>=4.5.0",
    "pandas>=2.0.0",
    "pillow~=11.1.0",
    "plotly>=5.0.0",
    "pydantic~=2.10.6",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.20",
    "pyyaml~=6.0.2",
    "sam2~=1.1.0",
    "sqlalchemy~=2.0.38",
    "timm>=1.0.19",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "uvicorn>=0.15.0",
]
